apps/base/jellyfin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`media.rickweb.net`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
